var searchData=
[
  ['safe_5fcast',['safe_cast',['../d8/d89/a00484.html#ab6efe1a2dbf4a57479e8c7faa00e3359',1,'stride::util']]],
  ['sample',['Sample',['../d2/da3/a00115.html#a562b022d2c7f2836b4400e7d19e1b040',1,'stride::HealthSeeder']]],
  ['saveconfig',['SaveConfig',['../d1/d51/a00079.html#a4568f237cc4481a8e89141cf302c3361',1,'Launcher']]],
  ['savegeogridtofile',['SaveGeoGridToFile',['../d8/d84/a00001.html#a5d45762f589c8487fc302921b5384d9d',1,'Backend']]],
  ['savemarker',['SaveMarker',['../d8/d84/a00001.html#adf9b211927ea607e016db0a487e80214',1,'Backend']]],
  ['secondarycommunity',['SecondaryCommunity',['../df/d5f/a00064.html#ae76835c6bb81ef67d25dc81b55ffa29d',1,'gengeopop::SecondaryCommunity']]],
  ['seed',['Seed',['../d1/d44/a00098.html#a0f7876d2c8d1a4c2bc8057da26f82df5',1,'stride::BeliefSeeder::Seed()'],['../d4/d81/a00110.html#adc5b1f152367382afe3dade9421357da',1,'stride::DiseaseSeeder::Seed()'],['../d2/da3/a00115.html#ad6a9061857cee5335745fe5501bcb73d',1,'stride::HealthSeeder::Seed()'],['../d5/da7/a00144.html#a81b191380f9a2c93768ff0efcec47f6b',1,'stride::SurveySeeder::Seed()']]],
  ['segmentedvector',['SegmentedVector',['../d4/d7d/a00093.html#ada0935b74686a1ab1a513c310ffbe90c',1,'stride::util::SegmentedVector::SegmentedVector()'],['../d4/d7d/a00093.html#abe518edf461ce52cc405357f1a074673',1,'stride::util::SegmentedVector::SegmentedVector(size_type i)'],['../d4/d7d/a00093.html#ab9dc137bd2fc3f337a106e8bffcecf4a',1,'stride::util::SegmentedVector::SegmentedVector(size_type i, const value_type &amp;value)'],['../d4/d7d/a00093.html#ae4f9b0a0e5d4dace47647217f084242c',1,'stride::util::SegmentedVector::SegmentedVector(const self_type &amp;other)'],['../d4/d7d/a00093.html#a7c2307e98e036cab31da16a478b4227d',1,'stride::util::SegmentedVector::SegmentedVector(self_type &amp;&amp;other) noexcept']]],
  ['selectall',['SelectAll',['../d8/d84/a00001.html#a5c6947858998d7709812d9bf825906dc',1,'Backend']]],
  ['selectarea',['SelectArea',['../d8/d84/a00001.html#a902157ea9e4cd13e6a25eed9135115e7',1,'Backend']]],
  ['selectextrainarea',['SelectExtraInArea',['../d8/d84/a00001.html#a74ab20ec1a62676534387b56c2b514d5',1,'Backend']]],
  ['serializewithcachedsizes',['SerializeWithCachedSizes',['../d1/d1e/a00087.html#a57a10d729699436e763072e4ce21da63',1,'proto::GeoGrid_Location_Coordinate::SerializeWithCachedSizes()'],['../da/d2a/a00086.html#a5986a248c798a01bdf75e7375b537f6e',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::SerializeWithCachedSizes()'],['../df/d13/a00085.html#ab7fba14e66df488437e9d6bb61f37efe',1,'proto::GeoGrid_Location_ContactCenter::SerializeWithCachedSizes()'],['../df/d5d/a00084.html#ab4af932b757d234c8b54087e6bf5f4f0',1,'proto::GeoGrid_Location_Commute::SerializeWithCachedSizes()'],['../d2/d1f/a00083.html#a5d483a64dc4cad06d5cc4dc33bc8c083',1,'proto::GeoGrid_Location::SerializeWithCachedSizes()'],['../db/ddf/a00088.html#a64b349ce53da096c02ad6b210c7ebfe1',1,'proto::GeoGrid_Person::SerializeWithCachedSizes()'],['../d4/d63/a00082.html#abb7255e19f769fc04dcd4e2cf183db3a',1,'proto::GeoGrid::SerializeWithCachedSizes()']]],
  ['set_5fage',['set_age',['../db/ddf/a00088.html#a36332585a29c97a4fa000feaef30192a',1,'proto::GeoGrid_Person']]],
  ['set_5fallocated_5fcoordinate',['set_allocated_coordinate',['../d2/d1f/a00083.html#ae6dbb45201d633d8cb62b7a553f76d37',1,'proto::GeoGrid_Location']]],
  ['set_5fallocated_5fgender',['set_allocated_gender',['../db/ddf/a00088.html#ae025827ef8f5443a8c772e3fda217a36',1,'proto::GeoGrid_Person']]],
  ['set_5fallocated_5fname',['set_allocated_name',['../d2/d1f/a00083.html#a01cf036be24d5c1d67a374d2a44fbcfd',1,'proto::GeoGrid_Location']]],
  ['set_5fgender',['set_gender',['../db/ddf/a00088.html#a41f1d07ad084428d39632fc73539d96c',1,'proto::GeoGrid_Person::set_gender(const ::std::string &amp;value)'],['../db/ddf/a00088.html#aafcbaddde62a012a510083ef2703d73a',1,'proto::GeoGrid_Person::set_gender(const char *value)'],['../db/ddf/a00088.html#a876925f5ee9252a6cf9654737be5d357',1,'proto::GeoGrid_Person::set_gender(const char *value, size_t size)']]],
  ['set_5fhas_5fage',['set_has_age',['../db/ddf/a00088.html#a9a8f21bc371d54f340abc817dd949dcc',1,'proto::GeoGrid_Person']]],
  ['set_5fhas_5fcoordinate',['set_has_coordinate',['../d2/d1f/a00083.html#a2f7fe66506f910537b03e28d4abd6b59',1,'proto::GeoGrid_Location']]],
  ['set_5fhas_5fgender',['set_has_gender',['../db/ddf/a00088.html#a013ae16b73851fbfaafa9a52de29ebe9',1,'proto::GeoGrid_Person']]],
  ['set_5fhas_5fid',['set_has_id',['../da/d2a/a00086.html#ac042da122653b7be2b0d8e3ebbc7b5d5',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::set_has_id()'],['../df/d13/a00085.html#ae07726f94fd221cd46e369886c490a60',1,'proto::GeoGrid_Location_ContactCenter::set_has_id()'],['../d2/d1f/a00083.html#ad7ebbcead7dc93673308fc637ec171fe',1,'proto::GeoGrid_Location::set_has_id()'],['../db/ddf/a00088.html#aa2a497e8a6577c9e2f808a430ee38141',1,'proto::GeoGrid_Person::set_has_id()']]],
  ['set_5fhas_5flatitude',['set_has_latitude',['../d1/d1e/a00087.html#acca38f5f6287ab32ce4101ec7a9ceb43',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5fhas_5flongitude',['set_has_longitude',['../d1/d1e/a00087.html#abc74541cc879e27256db7d1f1cb21440',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5fhas_5fname',['set_has_name',['../d2/d1f/a00083.html#ac9557a6aca7a99341e35e8f8dcc4066a',1,'proto::GeoGrid_Location']]],
  ['set_5fhas_5fpopulation',['set_has_population',['../d2/d1f/a00083.html#af745bee2ef930b42d6d45b33c6569ad6',1,'proto::GeoGrid_Location']]],
  ['set_5fhas_5fproportion',['set_has_proportion',['../df/d5d/a00084.html#a5004467a071260d1ec4facef3d748a61',1,'proto::GeoGrid_Location_Commute']]],
  ['set_5fhas_5fprovince',['set_has_province',['../d2/d1f/a00083.html#aea0596c9a764ed4915c36e022fcb93de',1,'proto::GeoGrid_Location']]],
  ['set_5fhas_5fto',['set_has_to',['../df/d5d/a00084.html#a1bdfd21cd0abaca7268093abb3faf341',1,'proto::GeoGrid_Location_Commute']]],
  ['set_5fhas_5ftype',['set_has_type',['../df/d13/a00085.html#a9d5c451641bda3b38820350cf3b364be',1,'proto::GeoGrid_Location_ContactCenter']]],
  ['set_5fhas_5fx',['set_has_x',['../d1/d1e/a00087.html#a72b56a70d26cad96425d95fc96887fb6',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5fhas_5fy',['set_has_y',['../d1/d1e/a00087.html#a492fc8dd332e9e5f0d7430977dab82f8',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5fid',['set_id',['../da/d2a/a00086.html#a3a96e7914b029f35fbb01df4994e19ca',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::set_id()'],['../df/d13/a00085.html#a8e7caabf4b4a582a09158b2f9b081147',1,'proto::GeoGrid_Location_ContactCenter::set_id()'],['../d2/d1f/a00083.html#a1d365381ae92aed8249b91cce620cf99',1,'proto::GeoGrid_Location::set_id()'],['../db/ddf/a00088.html#af5a849164874e312f51a5d100ecb2c61',1,'proto::GeoGrid_Person::set_id()']]],
  ['set_5flatitude',['set_latitude',['../d1/d1e/a00087.html#a676dbe40aedbf5a4e3ea42a86a6878e3',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5flongitude',['set_longitude',['../d1/d1e/a00087.html#a41462bd58d029d61dcb0fb40238b0285',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5fname',['set_name',['../d2/d1f/a00083.html#a7c05daf9d464d1459286d096d989bf23',1,'proto::GeoGrid_Location::set_name(const ::std::string &amp;value)'],['../d2/d1f/a00083.html#a985989f409ffec618810b9ae89fe07cb',1,'proto::GeoGrid_Location::set_name(const char *value)'],['../d2/d1f/a00083.html#a76aa00ce21d3d8541c3afa26b8a997f3',1,'proto::GeoGrid_Location::set_name(const char *value, size_t size)']]],
  ['set_5fpeople',['set_people',['../da/d2a/a00086.html#a8e56d12daa3127ca1ad24091ee7c4b7b',1,'proto::GeoGrid_Location_ContactCenter_ContactPool']]],
  ['set_5fpopulation',['set_population',['../d2/d1f/a00083.html#a881f94e3b033b5535b37654013177e31',1,'proto::GeoGrid_Location']]],
  ['set_5fproportion',['set_proportion',['../df/d5d/a00084.html#a998c31743b8d3d22470eca6e49ec0105',1,'proto::GeoGrid_Location_Commute']]],
  ['set_5fprovince',['set_province',['../d2/d1f/a00083.html#ac0e0fef5af15055b22c4d2419107caf1',1,'proto::GeoGrid_Location']]],
  ['set_5fsubmunicipalities',['set_submunicipalities',['../d2/d1f/a00083.html#a1fa339c24e126163faed830f6f3f11f0',1,'proto::GeoGrid_Location']]],
  ['set_5fto',['set_to',['../df/d5d/a00084.html#a87a5dda29b7cf251d8f8c57c901ca815',1,'proto::GeoGrid_Location_Commute']]],
  ['set_5ftype',['set_type',['../df/d13/a00085.html#a52834c8723f6f469c13bddd262ad01bd',1,'proto::GeoGrid_Location_ContactCenter']]],
  ['set_5fx',['set_x',['../d1/d1e/a00087.html#a27bca73b90563ed5c15fd8bd9b7e568f',1,'proto::GeoGrid_Location_Coordinate']]],
  ['set_5fy',['set_y',['../d1/d1e/a00087.html#a7804acd5d0639b40a40a1df0644f3a16',1,'proto::GeoGrid_Location_Coordinate']]],
  ['setage',['SetAge',['../d2/df5/a00137.html#a3629c9dae12f241933ae2649205767af',1,'stride::Person']]],
  ['setbelief',['SetBelief',['../d2/df5/a00137.html#a6154cfa75159d1dd882448eb21522010',1,'stride::Person']]],
  ['setbeliefpolicy',['SetBeliefPolicy',['../d4/ddd/a00138.html#a934a9192dbb0ade72b8c3e099c27a035',1,'stride::Population']]],
  ['setcachedsize',['SetCachedSize',['../d1/d1e/a00087.html#a7b789da11832e7f6cfce357a85db7db8',1,'proto::GeoGrid_Location_Coordinate::SetCachedSize()'],['../da/d2a/a00086.html#a50d59d176cfaf050088d2f17a8881b4c',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::SetCachedSize()'],['../df/d13/a00085.html#a145726940765df788099a0ba80dca0d3',1,'proto::GeoGrid_Location_ContactCenter::SetCachedSize()'],['../df/d5d/a00084.html#a406eb07183ccb035e18d004053b68a9c',1,'proto::GeoGrid_Location_Commute::SetCachedSize()'],['../d2/d1f/a00083.html#af826bad4fb1d3b9a7219af156267be97',1,'proto::GeoGrid_Location::SetCachedSize()'],['../db/ddf/a00088.html#ad24bbd7f0616a645029b7700205fd6c3',1,'proto::GeoGrid_Person::SetCachedSize()'],['../d4/d63/a00082.html#a6821bc8c7b417bd3a383280ea7cbf323',1,'proto::GeoGrid::SetCachedSize()']]],
  ['setcenters',['SetCenters',['../da/d45/a00011.html#a274b1339d7c42371f90ae180ec3bf8cf',1,'ContactCenterListModel']]],
  ['setcollegeid',['SetCollegeId',['../d2/df5/a00137.html#a2bfc17389f98a98f6bc2738e57bc6afd',1,'stride::Person']]],
  ['setcommutes',['SetCommutes',['../d7/dec/a00010.html#af5e62c909f419b5468655835e84cdc94',1,'CommutesListModel']]],
  ['setconfig',['SetConfig',['../d1/d51/a00079.html#ac137dfe9a1d9ed08b179627c71eca695',1,'Launcher']]],
  ['setconfigpath',['SetConfigPath',['../d1/d51/a00079.html#a73d93a492ebe652b29b3b07f4f418ac4',1,'Launcher']]],
  ['setcontroller',['SetController',['../d1/d51/a00079.html#a396b757d9cd2b6b2a7c75190227719cf',1,'Launcher']]],
  ['setcoordinate',['SetCoordinate',['../d9/d2e/a00056.html#a917cdfedc73aaecab077a92c6565c029',1,'gengeopop::Location']]],
  ['setgeogrids',['SetGeoGrids',['../d8/d84/a00001.html#acb9ec493bbac930f2c20e69963459770',1,'Backend::SetGeoGrids()'],['../d8/d53/a00081.html#a13cbf50eb92e9c512412e2da30a313b8',1,'Map::SetGeoGrids()']]],
  ['sethealthcolorof',['SetHealthColorOf',['../d8/d84/a00001.html#ad189839cb6b241f4df550d0e85522aae',1,'Backend']]],
  ['sethouseholdid',['SetHouseholdId',['../d2/df5/a00137.html#a6681529e309d84e7c42fe82562f1fdb4',1,'stride::Person']]],
  ['setid',['SetId',['../d2/df5/a00137.html#ac5a9312fa75fbf91e949f3aecbbeb129',1,'stride::Person']]],
  ['setimmune',['SetImmune',['../d8/d17/a00114.html#a2ed35c613838b7cc9fab87fb494f87a1',1,'stride::Health']]],
  ['setk12schoolid',['SetK12SchoolId',['../d2/df5/a00137.html#af38efc6b3fee69e629c6c1c37b51539d',1,'stride::Person']]],
  ['setobjects',['SetObjects',['../d8/d84/a00001.html#af3d90629f93456f7ed430d53225d28cc',1,'Backend']]],
  ['setparent',['SetParent',['../d9/d2e/a00056.html#afaf77f6359792d577c1d9ef5bdd1e434',1,'gengeopop::Location']]],
  ['setpoolid',['SetPoolId',['../d2/df5/a00137.html#a7a8e447907935f01c1e67164725728df',1,'stride::Person']]],
  ['setpools',['SetPools',['../d7/dd4/a00013.html#a77cae280f8f9b66eccde242df0b66464',1,'ContactPoolListModel']]],
  ['setprimarycommunityid',['SetPrimaryCommunityId',['../d2/df5/a00137.html#a6a1adcd3372fc02c20c2b93f741dd732',1,'stride::Person']]],
  ['setrange',['SetRange',['../d1/dc1/a00092.html#a96dae2d259d757f790a486194e87ada2',1,'stride::util::RangeIndexer::SetRange(std::size_t ibegin, std::size_t iend, const Key &amp;name)'],['../d1/dc1/a00092.html#a1c9359ec8d19704dbbe0382e40417236',1,'stride::util::RangeIndexer::SetRange(std::size_t ibegin, const Key &amp;name)'],['../d6/d7d/a00161.html#a6b0566a8eb6d02f9f2ad9545533944df',1,'stride::util::RangeIndexer&lt; T, std::size_t &gt;::SetRange(std::size_t ibegin, std::size_t iend, const std::size_t &amp;id)'],['../d6/d7d/a00161.html#a570288b736c62a3d6100ffbe386bc2f4',1,'stride::util::RangeIndexer&lt; T, std::size_t &gt;::SetRange(std::size_t ibegin, const std::size_t &amp;id)']]],
  ['setrelativepopulation',['SetRelativePopulation',['../d9/d2e/a00056.html#a9fc9a12c2b737823b55a5580d4bacdeb',1,'gengeopop::Location']]],
  ['setrootobject',['SetRootObject',['../d1/d51/a00079.html#ad2ccb8d2bf932012100890a1f3e5311c',1,'Launcher']]],
  ['setrunner',['SetRunner',['../d1/d09/a00077.html#a5fb8cc848936b093d449b45359e6dba2',1,'GuiControllerBackend']]],
  ['setsecondarycommunityid',['SetSecondaryCommunityId',['../d2/df5/a00137.html#a4e09e3947655fde28c4d29c1e32b35c7',1,'stride::Person']]],
  ['setshowcommutes',['SetShowCommutes',['../d8/d84/a00001.html#a6ff4f267985cb8eea228352455ab6b67',1,'Backend']]],
  ['setslice',['SetSlice',['../d0/d48/a00165.html#a058f206ff2b09de8004fe38737e571af',1,'stride::util::SliceIndexer::SetSlice(std::size_t ibegin, std::size_t iend, const std::string &amp;name)'],['../d0/d48/a00165.html#aba8419e386f526d2d8931130434ce649',1,'stride::util::SliceIndexer::SetSlice(std::size_t ibegin, const std::string &amp;name)']]],
  ['setsusceptible',['SetSusceptible',['../d8/d17/a00114.html#a8edeec79c050faabe2c09a1bc4860261',1,'stride::Health']]],
  ['settolaunch',['SetToLaunch',['../d1/d51/a00079.html#a820ab477ee17825d26a1f1898ebbfc3c',1,'Launcher']]],
  ['setworkid',['SetWorkId',['../d2/df5/a00137.html#af901d3a2d62ad342a5067252e7da4608',1,'stride::Person']]],
  ['sharedctor',['SharedCtor',['../d1/d1e/a00087.html#a38f891de383939096ba8ddceaefc9b7f',1,'proto::GeoGrid_Location_Coordinate::SharedCtor()'],['../da/d2a/a00086.html#ad8373d7e12e8555b9cc2f6726a6e195a',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::SharedCtor()'],['../df/d13/a00085.html#ab1101d023875dabaf29f4bbdb4a06181',1,'proto::GeoGrid_Location_ContactCenter::SharedCtor()'],['../df/d5d/a00084.html#a7bfe90b8bad0549b7f01dac247f4a54b',1,'proto::GeoGrid_Location_Commute::SharedCtor()'],['../d2/d1f/a00083.html#a8fde046b8a29c13d638f48f3771fa8e7',1,'proto::GeoGrid_Location::SharedCtor()'],['../db/ddf/a00088.html#a8acf99b9de4817e50a7b9189276ccacb',1,'proto::GeoGrid_Person::SharedCtor()'],['../d4/d63/a00082.html#af4fab526347d90e22210ba5e294336a6',1,'proto::GeoGrid::SharedCtor()']]],
  ['shareddtor',['SharedDtor',['../d1/d1e/a00087.html#ac86b89659c920a7278442b2a75821f29',1,'proto::GeoGrid_Location_Coordinate::SharedDtor()'],['../da/d2a/a00086.html#a8fe2e75551c8d73cc6b553be50efc61c',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::SharedDtor()'],['../df/d13/a00085.html#a7dcaa70dd6c984bca298618a7df010d7',1,'proto::GeoGrid_Location_ContactCenter::SharedDtor()'],['../df/d5d/a00084.html#a3368181ac9d9247452288c7daf630ba7',1,'proto::GeoGrid_Location_Commute::SharedDtor()'],['../d2/d1f/a00083.html#a813d99a6bb4e8adae7d2d5a39a3f3131',1,'proto::GeoGrid_Location::SharedDtor()'],['../db/ddf/a00088.html#addaa4fdea809444afbdaca4055dd6af7',1,'proto::GeoGrid_Person::SharedDtor()'],['../d4/d63/a00082.html#add027c74de86c395d6b529d76331c619',1,'proto::GeoGrid::SharedDtor()']]],
  ['showcommute',['ShowCommute',['../d8/d84/a00001.html#a852a5daca487b26cdb2416733cee3721',1,'Backend']]],
  ['showcontactcenter',['ShowContactCenter',['../df/d86/a00012.html#a0c1e190377d26b949763f6f385f0aa5f',1,'ContactCenterViewerBackend']]],
  ['showlocations',['ShowLocations',['../da/dec/a00080.html#a35ef7f08b66b7585b76e2b8bae6a48ac',1,'LocationViewerBackend']]],
  ['sim',['Sim',['../d5/db1/a00140.html#a8fe8e4385431342099c66352104c5595',1,'stride::Sim']]],
  ['simbuilder',['SimBuilder',['../d5/d4e/a00141.html#ada7d6656e97857b9bacd2285f7784021',1,'stride::SimBuilder']]],
  ['simrunner',['SimRunner',['../d2/d82/a00142.html#a3fad2909fa48a98d658908a0f147bb2e',1,'stride::SimRunner']]],
  ['simworker',['SimWorker',['../d7/dce/a00143.html#a0875edd265908fc98c009a0734559b7c',1,'stride::SimWorker']]],
  ['size',['size',['../dc/d87/a00032.html#ac9ad4de211352b09dfa99ebee6fe86cd',1,'gengeopop::GeoGrid::size()'],['../de/d38/a00160.html#a3742ff8effa83a1d26b57cf9163fb232',1,'stride::util::PartitionedSegmentedVector::size()'],['../d4/d7d/a00093.html#a0e279c31f261b01f7798355e27401bfe',1,'stride::util::SegmentedVector::size()'],['../d4/d6d/a00055.html#a6dbf9612b7ee27fd4ea2ba216bbbe5fe',1,'gengeopop::KdTree::Size()']]],
  ['sliceindexer',['SliceIndexer',['../d0/d48/a00165.html#a9210f4ffebabcdad9931ad724214b673',1,'stride::util::SliceIndexer']]],
  ['sortmembers',['SortMembers',['../d9/dcc/a00102.html#a6c90e9734ee7c6566bdf1f4416e99fd8',1,'stride::ContactPool']]],
  ['split',['Split',['../d8/d89/a00484.html#a600b27c06281da416f50a129c50b19f2',1,'stride::util']]],
  ['start',['Start',['../d9/d38/a00166.html#acaf0b5f9f645a7dd6420420443de5a96',1,'stride::util::Stopwatch']]],
  ['startinfection',['StartInfection',['../d8/d17/a00114.html#a5d85541b8e22aeaa75b364a454f59088',1,'stride::Health']]],
  ['stepday',['StepDay',['../d1/d09/a00077.html#ae36c8a0c983cc8eb2b9363548ddb79e9',1,'GuiControllerBackend']]],
  ['stepped',['Stepped',['../d1/d09/a00077.html#ad58508db2340bdb39355b6f85ce763a1',1,'GuiControllerBackend']]],
  ['stop',['Stop',['../d9/d38/a00166.html#a4b6145f590e94467a0048817f348ac75',1,'stride::util::Stopwatch']]],
  ['stopinfection',['StopInfection',['../d8/d17/a00114.html#af6a2ca202696ba2f39744a5381918922',1,'stride::Health']]],
  ['stopwatch',['Stopwatch',['../d9/d38/a00166.html#a925b07b32b747a519b37c549ba7f1531',1,'stride::util::Stopwatch']]],
  ['subject',['Subject',['../de/d14/a00139.html#a11248a4fef2115853ba2215bb14966a5',1,'stride::python::Subject::Subject()'],['../dc/de6/a00167.html#a4853b1d31d30e83840a9ab9a01d460dd',1,'stride::util::Subject::Subject()']]],
  ['submunicipalities',['submunicipalities',['../d2/d1f/a00083.html#a288f9df809ad80a45aac18077a76116b',1,'proto::GeoGrid_Location::submunicipalities(int index) const '],['../d2/d1f/a00083.html#aac231a5720bed3302dc8a91264606310',1,'proto::GeoGrid_Location::submunicipalities() const ']]],
  ['submunicipalities_5fsize',['submunicipalities_size',['../d2/d1f/a00083.html#aa6b681cff1e7752484cf41af78dcaf5b',1,'proto::GeoGrid_Location']]],
  ['submunicipalitiescsvreader',['SubMunicipalitiesCSVReader',['../d9/db3/a00066.html#a5ee4d9a74679ed737aaf4de6cfffca07',1,'gengeopop::SubMunicipalitiesCSVReader']]],
  ['submunicipalitiesreader',['SubMunicipalitiesReader',['../dc/ddf/a00067.html#ac94f368c917b043fb11c03cb3db709c2',1,'gengeopop::SubMunicipalitiesReader']]],
  ['summaryfile',['SummaryFile',['../d0/d5e/a00136.html#a1f848c3aa92042b2fa7d399ad31b0e33',1,'stride::output::SummaryFile']]],
  ['summaryviewer',['SummaryViewer',['../dd/d4c/a00177.html#aa0d17dc54d8062a4215f740451d56de0',1,'stride::viewers::SummaryViewer']]],
  ['surveyseeder',['SurveySeeder',['../d5/da7/a00144.html#ac54faf22994cbab9fd2452002a0fcf59',1,'stride::SurveySeeder']]],
  ['sviterator',['SVIterator',['../dd/da7/a00168.html#a314396936e46da86a1da0cc811225e27',1,'stride::util::SVIterator::SVIterator()'],['../dd/da7/a00168.html#ab481d9aa2bf4f1dd132a36fe2554be28',1,'stride::util::SVIterator::SVIterator(const self_type &amp;other)'],['../dd/da7/a00168.html#ac34d8cbf117630096864be24e5f3bca0',1,'stride::util::SVIterator::SVIterator(std::size_t p, container_pointer_type c)']]],
  ['swap',['Swap',['../d1/d1e/a00087.html#a1d79b45fbcc88683ccc5e78f527c95ed',1,'proto::GeoGrid_Location_Coordinate::Swap()'],['../da/d2a/a00086.html#a842f9a3748961272911f8c5bc424187a',1,'proto::GeoGrid_Location_ContactCenter_ContactPool::Swap()'],['../df/d13/a00085.html#aa685a95232b3b75bd8e4a9720e640c3f',1,'proto::GeoGrid_Location_ContactCenter::Swap()'],['../df/d5d/a00084.html#a3a7edf30115fee37ec7ab0352420f84f',1,'proto::GeoGrid_Location_Commute::Swap()'],['../d2/d1f/a00083.html#a4bc2a1da87de5f5db68bbfa11cda143e',1,'proto::GeoGrid_Location::Swap()'],['../db/ddf/a00088.html#ac15f10bec604604095ac71cc838e0f28',1,'proto::GeoGrid_Person::Swap()'],['../d4/d63/a00082.html#a5eee713fcbfb1b4de56fc4eae35d6580',1,'proto::GeoGrid::Swap()']]]
];
